Add support for setting the active state on AtkObjects

When a window is focused, the ATK_STATE_ACTIVE state should be available
in the list of object states for a window. Additionally, we should
receive state change, activate, and deactivate events when focus changes.
This change adds those features, but does not produce the appropriate
events for dialog boxes, which is the second part of adding full support
for the active state.


Bug: 866336
Change-Id: I890c39ada3d368c547d3b8a0801cc90fa1e2371a
Reviewed-on: https://chromium-review.googlesource.com/c/1257831
Commit-Queue: Martin Robinson <mrobinson@igalia.com>
Reviewed-by: Luke Halliwell <halliwell@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604333}
Former-commit-id: def9804a21277d6039629b2905dddd9e6dd83ddf