chrome/renderer/extensions/automation_ax_tree_wrapper.cc
@@ -114,6 +114,10 @@ api::automation::EventType ToAutomationEvent(ax::mojom::Event event_type) {
       return api::automation::EVENT_TYPE_TEXTCHANGED;
     case ax::mojom::Event::kTextSelectionChanged:
       return api::automation::EVENT_TYPE_TEXTSELECTIONCHANGED;
+    case ax::mojom::Event::kWindowActivated:
+      return api::automation::EVENT_TYPE_WINDOWACTIVATED;
+    case ax::mojom::Event::kWindowDeactivated:
+      return api::automation::EVENT_TYPE_WINDOWDEACTIVATED;
     case ax::mojom::Event::kTreeChanged:
       return api::automation::EVENT_TYPE_TREECHANGED;
     case ax::mojom::Event::kValueChanged:
@@ -389,6 +393,8 @@ bool AutomationAXTreeWrapper::IsEventTypeHandledByAXEventGenerator(
     case api::automation::EVENT_TYPE_MOUSEPRESSED:
     case api::automation::EVENT_TYPE_MOUSERELEASED:
     case api::automation::EVENT_TYPE_SCROLLEDTOANCHOR:
+    case api::automation::EVENT_TYPE_WINDOWACTIVATED:
+    case api::automation::EVENT_TYPE_WINDOWDEACTIVATED:
       return false;
 
     // These events might need to be migrated to AXEventGenerator.
