chromecast/renderer/extensions/automation_ax_tree_wrapper.cc
@@ -115,6 +115,10 @@ api::automation::EventType ToAutomationEvent(ax::mojom::Event event_type) {
       return api::automation::EVENT_TYPE_TEXTCHANGED;
     case ax::mojom::Event::kTextSelectionChanged:
       return api::automation::EVENT_TYPE_TEXTSELECTIONCHANGED;
+    case ax::mojom::Event::kWindowActivated:
+      return api::automation::EVENT_TYPE_WINDOWACTIVATED;
+    case ax::mojom::Event::kWindowDeactivated:
+      return api::automation::EVENT_TYPE_WINDOWDEACTIVATED;
     case ax::mojom::Event::kTreeChanged:
       return api::automation::EVENT_TYPE_TREECHANGED;
     case ax::mojom::Event::kValueChanged:
@@ -361,6 +365,8 @@ bool AutomationAXTreeWrapper::IsEventTypeHandledByAXEventGenerator(
     case api::automation::EVENT_TYPE_MOUSEMOVED:
     case api::automation::EVENT_TYPE_MOUSEPRESSED:
     case api::automation::EVENT_TYPE_MOUSERELEASED:
+    case api::automation::EVENT_TYPE_WINDOWACTIVATED:
+    case api::automation::EVENT_TYPE_WINDOWDEACTIVATED:
     case api::automation::EVENT_TYPE_SCROLLEDTOANCHOR:
       return false;
 
