ui/accessibility/platform/ax_platform_node_auralinux.cc
@@ -358,6 +358,15 @@ static gfx::Point FindAtkObjectParentCoords(AtkObject* atk_object) {
   return FindAtkObjectParentCoords(atk_object);
 }
 
+static AtkObject* FindAtkObjectParentFrame(AtkObject* atk_object) {
+  while (atk_object) {
+    if (atk_object_get_role(atk_object) == ATK_ROLE_FRAME)
+      return atk_object;
+    atk_object = atk_object_get_parent(atk_object);
+  }
+  return nullptr;
+}
+
 static void AXPlatformNodeAuraLinuxGetExtents(AtkComponent* atk_component,
                                               gint* x,
                                               gint* y,
@@ -960,6 +969,12 @@ static const GInterfaceInfo TextInfo = {
     reinterpret_cast<GInterfaceInitFunc>(AXTextInterfaceBaseInit), nullptr,
     nullptr};
 
+static void AXWindowInterfaceBaseInit(AtkWindowIface* iface) {}
+
+static const GInterfaceInfo WindowInfo = {
+    reinterpret_cast<GInterfaceInitFunc>(AXWindowInterfaceBaseInit), nullptr,
+    nullptr};
+
 //
 // The rest of the AXPlatformNodeAtk code, not specific to one
 // of the Atk* interfaces.
@@ -1047,6 +1062,12 @@ AtkObject* g_current_focused = nullptr;
 // but clients also expect notifications when items become unselected.
 AXPlatformNodeAuraLinux* g_current_selected = nullptr;
 
+// The AtkObject with role=ATK_ROLE_FRAME that represents the toplevel desktop
+// window with focus. If this window is not one of our windows, this value
+// should be null. This is a weak pointer as well, so its value will also be
+// null if if the AtkObject is destroyed.
+AtkObject* g_active_top_level_frame = nullptr;
+
 const char* GetUniqueAccessibilityGTypeName(int interface_mask) {
   // 37 characters is enough for "AXPlatformNodeAuraLinux%x" with any integer
   // value.
@@ -1062,6 +1083,20 @@ bool IsRoleWithValueInterface(AtkRole role) {
 }
 
 }  // namespace
+
+static void SetActiveTopLevelFrame(AtkObject* new_top_level_frame) {
+  if (g_active_top_level_frame)
+    g_object_remove_weak_pointer(
+        G_OBJECT(g_active_top_level_frame),
+        reinterpret_cast<void**>(&g_active_top_level_frame));
+
+  g_active_top_level_frame = new_top_level_frame;
+
+  if (g_active_top_level_frame)
+    g_object_add_weak_pointer(
+        G_OBJECT(g_active_top_level_frame),
+        reinterpret_cast<void**>(&g_active_top_level_frame));
+}
 
 void AXPlatformNodeAuraLinux::EnsureGTypeInit() {
 #if !GLIB_CHECK_VERSION(2, 36, 0)
@@ -1109,6 +1144,9 @@ int AXPlatformNodeAuraLinux::GetGTypeInterfaceMask() {
   if (role == ATK_ROLE_LINK)
     interface_mask |= 1 << ATK_HYPERLINK_INTERFACE;
 
+  if (role == ATK_ROLE_FRAME)
+    interface_mask |= 1 << ATK_WINDOW_INTERFACE;
+
   return interface_mask;
 }
 
@@ -1150,6 +1188,8 @@ GType AXPlatformNodeAuraLinux::GetAccessibilityGType() {
     g_type_add_interface_static(type, ATK_TYPE_HYPERTEXT, &HypertextInfo);
   if (interface_mask_ & (1 << ATK_TEXT_INTERFACE))
     g_type_add_interface_static(type, ATK_TYPE_TEXT, &TextInfo);
+  if (interface_mask_ & (1 << ATK_WINDOW_INTERFACE))
+    g_type_add_interface_static(type, ATK_TYPE_WINDOW, &WindowInfo);
 
   return type;
 }
@@ -1606,6 +1646,8 @@ AtkRole AXPlatformNodeAuraLinux::GetAtkRole() {
 
 void AXPlatformNodeAuraLinux::GetAtkState(AtkStateSet* atk_state_set) {
   AXNodeData data = GetData();
+  if (atk_object_ == g_active_top_level_frame)
+    atk_state_set_add_state(atk_state_set, ATK_STATE_ACTIVE);
   if (data.HasState(ax::mojom::State::kCollapsed))
     atk_state_set_add_state(atk_state_set, ATK_STATE_EXPANDABLE);
   if (data.HasState(ax::mojom::State::kDefault))
@@ -1789,8 +1831,36 @@ void AXPlatformNodeAuraLinux::OnExpandedStateChanged(bool is_expanded) {
                                  is_expanded);
 }
 
+void AXPlatformNodeAuraLinux::OnWindowActivated() {
+  AtkObject* parent_frame = FindAtkObjectParentFrame(atk_object_);
+  if (!parent_frame || parent_frame == g_active_top_level_frame)
+    return;
+
+  SetActiveTopLevelFrame(parent_frame);
+
+  g_signal_emit_by_name(parent_frame, "activate");
+  atk_object_notify_state_change(parent_frame, ATK_STATE_ACTIVE, TRUE);
+}
+
+void AXPlatformNodeAuraLinux::OnWindowDeactivated() {
+  AtkObject* parent_frame = FindAtkObjectParentFrame(atk_object_);
+  if (!parent_frame || parent_frame != g_active_top_level_frame)
+    return;
+
+  SetActiveTopLevelFrame(nullptr);
+
+  g_signal_emit_by_name(parent_frame, "deactivate");
+  atk_object_notify_state_change(parent_frame, ATK_STATE_ACTIVE, FALSE);
+}
+
 void AXPlatformNodeAuraLinux::OnFocused() {
   DCHECK(atk_object_);
+
+  if (atk_object_get_role(atk_object_) == ATK_ROLE_FRAME) {
+    g_signal_emit_by_name(atk_object_, "activate");
+    atk_object_notify_state_change(atk_object_, ATK_STATE_ACTIVE, TRUE);
+    return;
+  }
 
   if (atk_object_ == g_current_focused)
     return;
@@ -1890,6 +1960,12 @@ void AXPlatformNodeAuraLinux::NotifyAccessibilityEvent(
       break;
     case ax::mojom::Event::kValueChanged:
       OnValueChanged();
+      break;
+    case ax::mojom::Event::kWindowActivated:
+      OnWindowActivated();
+      break;
+    case ax::mojom::Event::kWindowDeactivated:
+      OnWindowDeactivated();
       break;
     default:
       break;
